<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        style="@style/CardViewType1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/basic_margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_hat"
                android:layout_width="0dp"
                android:layout_height="@dimen/card_hat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/ll_ticker_and_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/basic_margin"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/ll_time"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_ticker"
                        style="@style/TextHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_time"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_margin="@dimen/basic_margin"
                    android:background="@drawable/time_background"
                    android:gravity="center_vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_delete"
                    app:layout_constraintStart_toEndOf="@+id/ll_ticker_and_name"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_time"
                        style="@style/TextHeader"
                        android:hapticFeedbackEnabled="true"
                       android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="@dimen/basic_margin"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:lines="1"
                        android:maxLines="1" />


                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_delete"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_margin="@dimen/basic_margin"
                    android:src="@drawable/ic_delete"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ll_time"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_hat" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ll_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/half_basic_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider">

                <TextView
                    android:id="@+id/tv_week_1"
                    style="@style/TextMid"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/week_item_background"
                    android:gravity="center"
                    android:text="@string/MO"
                    android:textColor="@color/color_on"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_week_2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_week_2"
                    style="@style/TextMid"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/week_item_background"
                    android:gravity="center"
                    android:text="@string/TU"
                    android:textColor="@color/color_on"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_week_3"
                    app:layout_constraintStart_toEndOf="@id/tv_week_1"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_week_3"
                    style="@style/TextMid"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/week_item_background"
                    android:gravity="center"
                    android:text="@string/WE"
                    android:textColor="@color/color_on"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_week_4"
                    app:layout_constraintStart_toEndOf="@id/tv_week_2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_week_4"
                    style="@style/TextMid"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/week_item_background"
                    android:gravity="center"
                    android:text="@string/TH"
                    android:textColor="@color/color_on"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_week_5"
                    app:layout_constraintStart_toEndOf="@id/tv_week_3"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_week_5"
                    style="@style/TextMid"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/week_item_background"
                    android:gravity="center"
                    android:text="@string/FR"
                    android:textColor="@color/color_on"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_week_6"
                    app:layout_constraintStart_toEndOf="@id/tv_week_4"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_week_6"
                    style="@style/TextMid"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/week_item_background"
                    android:gravity="center"
                    android:text="@string/SA"
                    android:textColor="@color/color_on"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_week_7"
                    app:layout_constraintStart_toEndOf="@id/tv_week_5"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_week_7"
                    style="@style/TextMid"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/week_item_background"
                    android:gravity="center"
                    android:text="@string/SU"
                    android:textColor="@color/color_on"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_week_6"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</FrameLayout>